# alarm

./: CHANGELOG.md  Cargo.toml  README.md  alarm.flac
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
gtk/: Alarm.desktop  Cargo.toml  style.css
gtk/src/: main.rs  navigation.rs  new_alarm.rs  ringing_alarm.rs
rezz/: Cargo.toml  README.md  org.catacombing.rezz.conf  rezz.service
rezz/src/: dbus.rs  ioctl.rs  lib.rs  logind.rs  main.rs
src/: audio.rs  cli.rs  dbus.rs  error.rs  lib.rs  timer.rs
