[package]
name = "alarm"
version = "0.1.0"
description = "Rezz alarm clock client interface"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/alarm"
rust-version = "1.72.1"
license = "GPL-3.0"
edition = "2021"

[workspace]
members = ["rezz", "cli", "gtk"]

[dependencies]
libc = "0.2.148"
rezz = { version = "0.1.0", path = "./rezz" }
rodio = "0.17.1"
thiserror = "1.0.48"
time = { version = "0.3.29", features = ["macros", "formatting", "local-offset"] }
tokio-stream = "0.1.14"
tokio = { version = "1.32.0", features = ["macros", "signal"] }
zbus = { version = "3.14.1", default-features = false, features = ["tokio"] }
