[package]
name = "alarm"
version = "1.1.0"
description = "Rezz alarm clock client interface"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/alarm"
license = "GPL-3.0"
rust-version.workspace = true
edition.workspace = true

[workspace]
members = ["rezz", "cli", "gtk"]

[workspace.package]
edition = "2024"
rust-version = "1.85.0"

[workspace.dependencies]
alarm = { version = "1.1.0", path = "./" }
clap = "4.4.4"
futures-util = "0.3.31"
gtk4 = "0.10.0"
libc = "0.2.148"
nix = "0.30.1"
rezz = { version = "1.1.0", path = "./rezz" }
rodio = { version = "0.21.1", default-features = false, features = ["playback", "flac"] }
serde = "1.0.188"
serde_json = "1.0.107"
thiserror = "2.0.11"
time = "0.3.29"
tokio = "1.32.0"
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = "1.4.1"
zbus = { version = "5.5.0", default-features = false }

[dependencies]
libc.workspace = true
rezz.workspace = true
rodio.workspace = true
thiserror.workspace = true
time = { workspace = true, features = ["macros", "formatting", "local-offset"] }
tokio-stream.workspace = true
tokio = { workspace = true, features = ["macros", "signal"] }
zbus = { workspace = true, features = ["tokio"] }
