[package]
name = "alarm-cli"
version = "0.1.0"
description = "CLI alarm clock"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/alarm"
rust-version = "1.77.0"
license = "GPL-3.0"
edition = "2021"

[dependencies]
alarm = { version = "0.1.0", path = "../" }
clap = { version = "4.4.4", features = ["derive"] }
rezz = { version = "0.1.0", path = "../rezz" }
thiserror = "2.0.11"
time = { version = "0.3.29", features = ["formatting", "local-offset"] }
tokio = { version = "1.32.0", features = ["macros"] }
uuid = { version = "1.4.1", features = ["v4"] }
