[package]
name = "alarm-cli"
version = "1.0.0"
description = "CLI alarm clock"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/alarm"
license = "GPL-3.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
alarm.workspace = true
clap = { workspace = true, features = ["derive"] }
rezz.workspace = true
thiserror.workspace = true
time = { workspace = true, features = ["formatting", "local-offset"] }
tokio = { workspace = true, features = ["macros"] }
uuid = { workspace = true, features = ["v4"] }
