[package]
name = "alarm-gtk"
version = "0.1.0"
description = "GTK alarm clock"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/alarm"
rust-version = "1.72.1"
license = "GPL-3.0"
edition = "2021"

[dependencies]
alarm = { version = "0.1.0", path = "../" }
gtk4 = { version = "0.6.2", features = ["v4_10"] }
rezz = { version = "0.1.0", path = "../rezz" }
thiserror = "1.0.48"
time = { version = "0.3.29", features = ["macros", "formatting", "local-offset"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.4.1", features = ["v4"] }
