[package]
name = "alarm-gtk"
version = "1.0.0"
description = "GTK alarm clock"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/alarm"
license = "GPL-3.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
alarm.workspace = true
gtk4 = { workspace = true, features = ["v4_10"] }
rezz.workspace = true
thiserror.workspace = true
time = { workspace = true, features = ["macros", "formatting", "local-offset"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid = { workspace = true, features = ["v4"] }
