[package]
name = "rezz"
version = "1.1.1"
description = "DBus RTC alarm clock daemon"
repository = "https://github.com/catacombing/alarm"
license = "GPL-3.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
futures-util.workspace = true
nix = { workspace = true, features = ["ioctl"] }
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
time = { workspace = true, features = ["local-offset"] }
tokio = { workspace = true, features = ["macros"] }
tracing-subscriber.workspace = true
tracing.workspace = true
zbus = { workspace = true, features = ["tokio"] }
